objects/tfn_Management_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apply ecological burning</fullName>
                </value>
                <value>
                    <fullName>Control/reduce human disturbance</fullName>
                </value>
                <value>
                    <fullName>Control introduced animals to reduce competition</fullName>
                </value>
                <value>
                    <fullName>Control introduced animals to reduce grazing</fullName>
                </value>
                <value>
                    <fullName>Control introduced animals to reduce predation</fullName>
                </value>
                <value>
                    <fullName>Control native animals to reduce competition</fullName>
                </value>
                <value>
                    <fullName>Control native animals to reduce grazing</fullName>
                </value>
                <value>
                    <fullName>Erosion control</fullName>
                </value>
                <value>
                    <fullName>Manage environmental weeds</fullName>
                </value>
                <value>
                    <fullName>Manage high threat environmental weeds</fullName>
                </value>
                <value>
                    <fullName>Manage Plant Pathogens</fullName>
                </value>
                <value>
                    <fullName>Prevent habitat fragmentation</fullName>
                </value>
                <value>
                    <fullName>Prevent habitat loss</fullName>
                </value>
                <value>
                    <fullName>Protect habitat from fire</fullName>
                </value>
                <value>
                    <fullName>Protect habitat from fire prevention activities</fullName>
                </value>
                <value>
                    <fullName>Protect habitat from fire suppression activities</fullName>
                </value>
                <value>
                    <fullName>Restore habitat</fullName>
                </value>
                <value>
                    <fullName>Undertake disturbance activities to maintain habitat and/or manage biomass</fullName>
                </value>
                <value>
                    <fullName>Weed Control</fullName>
                </value>
                <value>
                    <fullName>Inkweed Control</fullName>
                    <isActive>false</isActive>
                    <label>Inkweed Control</label>
                </value>
                <value>
                    <fullName>St John&apos;s Wort Control</fullName>
                    <isActive>false</isActive>
                    <label>St John&apos;s Wort Control</label>
                </value>
                <value>
                    <fullName>Thistle Control</fullName>
                    <isActive>false</isActive>
                    <label>Thistle Control</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfN_Man_Action_Description__c</fullName>
        <label>Man Action Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Action_Objective__c</fullName>
        <label>Action Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Still to be determined</fullName>
                    <isActive>false</isActive>
                    <label>Still to be determined</label>
                </value>
                <value>
                    <fullName>three</fullName>
                    <isActive>false</isActive>
                    <label>three</label>
                </value>
                <value>
                    <fullName>two</fullName>
                    <isActive>false</isActive>
                    <label>two</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Action_Outcome_Descriotion__c</fullName>
        <label>Action Outcome Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Action_Outcome__c</fullName>
        <label>Action Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Achieved Objective</fullName>
                </value>
                <value>
                    <fullName>Did Not Achieve Objective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_EVC_Major_Asset_Category__c</fullName>
        <formula>tfn_Targeted_Species__r.tfn_Major_Asset_Category__c</formula>
        <label>EVC Major Asset Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Name_Official__c</fullName>
        <formula>tfn_Targeted_Species__r.tfn_EVC_Name_Official__c</formula>
        <label>EVC Name (Official)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipName>Management_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tfn_Mangement_Action_ID__c</fullName>
        <displayFormat>MA{00000}</displayFormat>
        <label>Mangement Action ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Objective_Description__c</fullName>
        <label>Objective Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Common_Name__c</fullName>
        <formula>tfn_Targeted_Species__r.tfn_Common_Name__c</formula>
        <label>Species Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Scientific_Name__c</fullName>
        <formula>tfn_Targeted_Species__r.tfn_Species__r.Name</formula>
        <label>Species Scientific Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Target_Species_Common_Name__c</fullName>
        <formula>tfn_Targeted_Species__r.tfn_Common_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Species Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Targeted_Species__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the flora or fauna or EC, on this and/or next door property, that is posing a threat to your conservation asset. e.g. a feral cat for endangered mouse!!</inlineHelpText>
        <label>Targeted Threat</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Species_EVC_Observation__c.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>$Source.tfn_Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species_EVC_Observation__c</referenceTo>
        <relationshipLabel>Threats and Management Actions</relationshipLabel>
        <relationshipName>Management_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Class__c</fullName>
        <label>Threat Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altered water regime</fullName>
                    <color>#FFFFFF</color>
                    <label>Altered water regime</label>
                </value>
                <value>
                    <fullName>Altered physical form</fullName>
                    <color>#FFFFFF</color>
                    <label>Altered physical form</label>
                </value>
                <value>
                    <fullName>Poor water quality</fullName>
                    <color>#FFFFFF</color>
                    <label>Poor water quality</label>
                </value>
                <value>
                    <fullName>Degraded habitats</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded habitats</label>
                </value>
                <value>
                    <fullName>Reduced connectivity</fullName>
                    <color>#FFFFFF</color>
                    <label>Reduced connectivity</label>
                </value>
                <value>
                    <fullName>Soil disturbance</fullName>
                    <color>#FFFFFF</color>
                    <label>Soil disturbance</label>
                </value>
                <value>
                    <fullName>Competition</fullName>
                    <color>#FFFFFF</color>
                    <label>Competition</label>
                </value>
                <value>
                    <fullName>Herbivory</fullName>
                    <color>#FFFFFF</color>
                    <label>Herbivory</label>
                </value>
                <value>
                    <fullName>Predation</fullName>
                    <color>#FFFFFF</color>
                    <label>Predation</label>
                </value>
                <value>
                    <fullName>Trampling</fullName>
                    <color>#FFFFFF</color>
                    <label>Trampling</label>
                </value>
                <value>
                    <fullName>Genetic decline</fullName>
                    <color>#FFFFFF</color>
                    <label>Genetic decline</label>
                </value>
                <value>
                    <fullName>Disease</fullName>
                    <color>#FFFFFF</color>
                    <label>Disease</label>
                </value>
                <value>
                    <fullName>Parasitism</fullName>
                    <color>#FFFFFF</color>
                    <label>Parasitism</label>
                </value>
                <value>
                    <fullName>Inappropriate fire regime</fullName>
                    <color>#FFFFFF</color>
                    <label>Inappropriate fire regime</label>
                </value>
                <value>
                    <fullName>Human disturbance</fullName>
                    <color>#FFFFFF</color>
                    <label>Human disturbance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Threat_Current_Level__c</fullName>
        <label>Threat Current Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Threat_Descripti__c</fullName>
        <label>Threat Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Managemen_tAction_Priority__c</fullName>
        <label>Threat Management Action Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <color>#FFFFFF</color>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFFFFF</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#FFFFFF</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Very High</fullName>
                    <color>#FFFFFF</color>
                    <label>Very High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Threat_Management_Action_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Threat Management Action Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>tfn_Threat_Management_Action_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Management_Action_Due_Date__c</fullName>
        <label>Threat Management Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Management_Action_Status__c</fullName>
        <label>Threat Management Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <color>#FFFFFF</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#FFFFFF</color>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Threat_Name__c</fullName>
        <description>Threats - dependent picklist related to Threat Class</description>
        <label>Threat Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>tfn_Threat_Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acidification</fullName>
                    <color>#FFFFFF</color>
                    <label>Acidification</label>
                </value>
                <value>
                    <fullName>Altered flow regimes (river and estuary) - low/high/zero flows, variability and</fullName>
                    <color>#FFFFFF</color>
                    <label>Altered flow regimes (river and estuary) - low/high/zero flows, variability and</label>
                </value>
                <value>
                    <fullName>Altered marine exchange - estuary opening regime</fullName>
                    <color>#FFFFFF</color>
                    <label>Altered marine exchange - estuary opening regime</label>
                </value>
                <value>
                    <fullName>Altered wetland form – depth, shape, bathymetry, dredging, channel alteration</fullName>
                    <color>#FFFFFF</color>
                    <label>Altered wetland form – depth, shape, bathymetry, dredging, channel alteration</label>
                </value>
                <value>
                    <fullName>Bacterial or fungal infections</fullName>
                    <color>#FFFFFF</color>
                    <label>Bacterial or fungal infections</label>
                </value>
                <value>
                    <fullName>Bank instability (river and estuary) - erosion, slumping, livestock access</fullName>
                    <color>#FFFFFF</color>
                    <label>Bank instability (river and estuary) - erosion, slumping, livestock access</label>
                </value>
                <value>
                    <fullName>Barriers to estuarine biota</fullName>
                    <color>#FFFFFF</color>
                    <label>Barriers to estuarine biota</label>
                </value>
                <value>
                    <fullName>Bed instability (river) - deepening, knickpoints</fullName>
                    <color>#FFFFFF</color>
                    <label>Bed instability (river) - deepening, knickpoints</label>
                </value>
                <value>
                    <fullName>Biota decline</fullName>
                    <color>#FFFFFF</color>
                    <label>Biota decline</label>
                </value>
                <value>
                    <fullName>Changed water regime (wetland) - seasonality, duration, frequency</fullName>
                    <color>#FFFFFF</color>
                    <label>Changed water regime (wetland) - seasonality, duration, frequency</label>
                </value>
                <value>
                    <fullName>Compaction – (human, vehicles, introduced fauna)</fullName>
                    <color>#FFFFFF</color>
                    <label>Compaction – (human, vehicles, introduced fauna)</label>
                </value>
                <value>
                    <fullName>Damage from tourism and recreation</fullName>
                    <color>#FFFFFF</color>
                    <label>Damage from tourism and recreation</label>
                </value>
                <value>
                    <fullName>Degraded estuarine vegetation</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded estuarine vegetation</label>
                </value>
                <value>
                    <fullName>Degraded riparian vegetation – structure, large trees</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded riparian vegetation – structure, large trees</label>
                </value>
                <value>
                    <fullName>Degraded terrestrial vegetation</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded terrestrial vegetation</label>
                </value>
                <value>
                    <fullName>Degraded water quality (estuary) -dissolved oxygen, turbidity, pH, chlorophyll a</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded water quality (estuary) -dissolved oxygen, turbidity, pH, chlorophyll a</label>
                </value>
                <value>
                    <fullName>Degraded water quality (wetland) - altered salinity regime, nutrient enrichment</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded water quality (wetland) - altered salinity regime, nutrient enrichment</label>
                </value>
                <value>
                    <fullName>Degraded water quality river - dissolved oxygen, conductivity, pH, phosphorus, nitrogen, turbidity, temperature, black water, nutrients, salinisation</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded water quality river - dissolved oxygen, conductivity, pH, phosphorus, nitrogen, turbidity, temperature, black water, nutrients, salinisation</label>
                </value>
                <value>
                    <fullName>Degraded wetland buffer vegetation</fullName>
                    <color>#FFFFFF</color>
                    <label>Degraded wetland buffer vegetation</label>
                </value>
                <value>
                    <fullName>Destruction of flora or fauna habitat</fullName>
                    <color>#FFFFFF</color>
                    <label>Destruction of flora or fauna habitat</label>
                </value>
                <value>
                    <fullName>Disease caused by pathogens</fullName>
                    <color>#FFFFFF</color>
                    <label>Disease caused by pathogens</label>
                </value>
                <value>
                    <fullName>Disturbance of acid sulphate soils</fullName>
                    <color>#FFFFFF</color>
                    <label>Disturbance of acid sulphate soils</label>
                </value>
                <value>
                    <fullName>Dumping – soil, rubbish</fullName>
                    <color>#FFFFFF</color>
                    <label>Dumping – soil, rubbish</label>
                </value>
                <value>
                    <fullName>Effluent – agricultural and industrial effluent</fullName>
                    <color>#FFFFFF</color>
                    <label>Effluent – agricultural and industrial effluent</label>
                </value>
                <value>
                    <fullName>Erosion</fullName>
                    <color>#FFFFFF</color>
                    <label>Erosion</label>
                </value>
                <value>
                    <fullName>Fauna</fullName>
                    <color>#FFFFFF</color>
                    <label>Fauna</label>
                </value>
                <value>
                    <fullName>Flora</fullName>
                    <color>#FFFFFF</color>
                    <label>Flora</label>
                </value>
                <value>
                    <fullName>Fragmentation barriers - to movement and/or reproduction</fullName>
                    <color>#FFFFFF</color>
                    <label>Fragmentation barriers - to movement and/or reproduction</label>
                </value>
                <value>
                    <fullName>Fragmentation increased isolation - of remaining fragments (and of gene pools)</fullName>
                    <color>#FFFFFF</color>
                    <label>Fragmentation increased isolation - of remaining fragments (and of gene pools)</label>
                </value>
                <value>
                    <fullName>Fragmentation reduction in size - remaining fragments</fullName>
                    <color>#FFFFFF</color>
                    <label>Fragmentation reduction in size - remaining fragments</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Threat_Potential_Level__c</fullName>
        <label>Threat Potential Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Threat and Management Action</label>
    <nameField>
        <label>Management Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Threats and Management Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>